# gans

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
gans/: trainer.py
gans/data/: celeb_faces_a.py  coco_minitrain.py  transforms.py
gans/evaulation/: plots.py
gans/models/: dcgan.py
gans/models/backbones/: __init__.py  resnet.py  resnet_old.py
gans/utils/: box_ops.py  misc_utils.py  model_utils.py
scripts/: train.py
scripts/configs/: base-config.yaml  laptop-base-config.yaml
scripts/configs/dcgan/: dcgan-base.yaml  model-base.yaml
