[tool.poetry]
# $ pip install pytemplate
name = "gans"
version = "0.0.1"
description = "A modular framework for gans, mostly for my own understanding."
authors = ["Bradley Selee"]
license = "LICENSE.txt"

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "*"
pytest = "*"
pyyaml = "*"
# Torch libraries are in makefile due to cuda install
fire = "*"
tqdm = "*"
pycocotools = "*"

# Linters/formatters
mypy = "*"
pylint = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"